# rassa

./: .gitignore  Cargo.toml  LICENSE  README.md  master-plan.md  ongoing.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish-release.yml
crates/rassa/: Cargo.toml
crates/rassa-capi/: Cargo.toml
crates/rassa-capi/src/: lib.rs
crates/rassa-check/: Cargo.toml
crates/rassa-check/src/: lib.rs  main.rs
crates/rassa-core/: Cargo.toml
crates/rassa-core/src/: lib.rs
crates/rassa-fonts/: Cargo.toml
crates/rassa-fonts/src/: lib.rs
crates/rassa-layout/: Cargo.toml
crates/rassa-layout/src/: lib.rs
crates/rassa-libass-capi/: Cargo.toml  build.rs
crates/rassa-libass-capi/src/: lib.rs
crates/rassa-parse/: Cargo.toml
crates/rassa-parse/src/: lib.rs
crates/rassa-raster/: Cargo.toml  NOTICE  README.md  build.rs
crates/rassa-raster/csrc/: ass_compat.h  config.h  rassa_libass_raster.c
crates/rassa-raster/src/: lib.rs
crates/rassa-raster/src/crossfont/: mod.rs  web.rs
crates/rassa-raster/src/crossfont/darwin/: mod.rs
crates/rassa-raster/src/crossfont/directwrite/: mod.rs
crates/rassa-raster/src/crossfont/ft/: mod.rs  svg.rs
crates/rassa-raster/src/crossfont/ft/fc/: char_set.rs  config.rs  font_set.rs  mod.rs  object_set.rs  pattern.rs
crates/rassa-render/: Cargo.toml
crates/rassa-render/src/: helpers.rs  lib.rs  metrics.rs  metrics_02ass_scan.rs  tests.rs
crates/rassa-render/src/helpers/: blur.rs  clip.rs  config.rs  drawing.rs  effects.rs  planes.rs  style.rs  transform.rs
crates/rassa-shape/: Cargo.toml
crates/rassa-shape/src/: lib.rs
crates/rassa-test/: Cargo.toml
crates/rassa-test/fixtures/libass/compare/broad/: broad_box.ass  broad_karaoke.ass  broad_overrides.ass  broad_static.ass
crates/rassa-test/fixtures/libass/compare/edge/: effect_drawing.ass  vector_transform.ass
crates/rassa-test/src/: lib.rs
crates/rassa-unibreak/: Cargo.toml
crates/rassa-unibreak-sys/: Cargo.toml  build.rs
crates/rassa-unibreak-sys/src/: lib.rs
crates/rassa-unibreak/src/: lib.rs
crates/rassa-unicode/: Cargo.toml  build.rs
crates/rassa-unicode/src/: lib.rs
crates/rassa/src/: lib.rs
pkgconfig/: libass.pc  rassa.pc
scripts/: e2e-capi-smoke.c  e2e-linux-capi.sh
