[workspace]
members = [
	"crates/rassa-core",
	"crates/rassa-parse",
	"crates/rassa-unicode",
	"crates/rassa-unibreak-sys",
	"crates/rassa-unibreak",
	"crates/rassa-fonts",
	"crates/rassa-shape",
	"crates/rassa-raster",
	"crates/rassa-layout",
	"crates/rassa-render",
	"crates/rassa",
	"crates/rassa-capi",
	"crates/rassa-libass-capi",
	"crates/rassa-check",
	"crates/rassa-test",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/altqx/rassa"
readme = "README.md"
keywords = ["subtitles", "ass", "renderer", "libass", "rust"]

[workspace.dependencies]
libc = "0.2"
