[package]
name = "rassa-capi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libc.workspace = true
rassa-core = { path = "../rassa-core" }
rassa-fonts = { path = "../rassa-fonts" }
rassa-parse = { path = "../rassa-parse" }
rassa-render = { path = "../rassa-render" }

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
