[package]
name = "rassa-capi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared C ABI implementation used by rassa shared-library targets."
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
libc.workspace = true
rassa-core = { path = "../rassa-core", version = "0.3.0" }
rassa-fonts = { path = "../rassa-fonts", version = "0.3.0" }
rassa-parse = { path = "../rassa-parse", version = "0.3.0" }
rassa-render = { path = "../rassa-render", version = "0.3.0" }

[lib]
name = "rassa_capi"
path = "src/lib.rs"
crate-type = ["rlib"]
