[package]
name = "rassa-check"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line visual checking tool for rassa subtitle rendering."
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rassa-core = { path = "../rassa-core", version = "0.5.1" }
rassa-fonts = { path = "../rassa-fonts", version = "0.5.1" }
rassa-parse = { path = "../rassa-parse", version = "0.5.1" }
rassa-render = { path = "../rassa-render", version = "0.5.1" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "rassa-check"
path = "src/main.rs"
