[package]
name = "rassa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared core types for the rassa ASS subtitle renderer."
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
path = "src/lib.rs"
