[package]
name = "rassa-fonts"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Font discovery and font-facing utilities for the rassa ASS subtitle renderer."
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
ttf-parser = "0.25.1"
fontdb = "0.23.0"

[lib]
path = "src/lib.rs"
