[package]
name = "rassa-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rassa-core = { path = "../rassa-core" }
rassa-fonts = { path = "../rassa-fonts" }
rassa-parse = { path = "../rassa-parse" }
rassa-raster = { path = "../rassa-raster" }
rassa-shape = { path = "../rassa-shape" }
rassa-unicode = { path = "../rassa-unicode" }

[lib]
path = "src/lib.rs"
