[package]
name = "rassa-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ASS subtitle layout pipeline for the rassa renderer."
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
rassa-core = { path = "../rassa-core", version = "0.1.1" }
rassa-fonts = { path = "../rassa-fonts", version = "0.1.1" }
rassa-parse = { path = "../rassa-parse", version = "0.1.1" }
rassa-raster = { path = "../rassa-raster", version = "0.1.1" }
rassa-shape = { path = "../rassa-shape", version = "0.1.1" }
rassa-unicode = { path = "../rassa-unicode", version = "0.1.1" }

[lib]
path = "src/lib.rs"
