[package]
name = "rassa-libass-capi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "libass-compatible C ABI shared-library target for rassa."
repository.workspace = true
readme.workspace = true
keywords.workspace = true
build = "build.rs"

[dependencies]
rassa_capi = { package = "rassa-capi", path = "../rassa-capi", version = "0.1.0" }

[lib]
name = "ass"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
