[package]
name = "rassa-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ASS subtitle parser for the rassa renderer."
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
iconv-native.workspace = true
rassa-core = { path = "../rassa-core", version = "0.6.0" }

[lib]
path = "src/lib.rs"
