[package]
name = "rassa-raster"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rassa-core = { path = "../rassa-core" }
rassa-fonts = { path = "../rassa-fonts" }
rassa-shape = { path = "../rassa-shape" }
freetype-rs = "0.38.0"

[lib]
path = "src/lib.rs"
