[package]
name = "rassa-raster"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Glyph and drawing rasterization pipeline for the rassa renderer."
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
rassa-core = { path = "../rassa-core", version = "0.1.1" }
rassa-fonts = { path = "../rassa-fonts", version = "0.1.1" }
rassa-shape = { path = "../rassa-shape", version = "0.1.1" }
freetype-rs = "0.38.0"

[lib]
path = "src/lib.rs"
