[package]
name = "rassa-raster"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Glyph rasterization and bitmap effects for the rassa ASS subtitle renderer."
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
rassa-core = { path = "../rassa-core", version = "0.1.1" }
rassa-fonts = { path = "../rassa-fonts", version = "0.1.1" }
rassa-shape = { path = "../rassa-shape", version = "0.1.1" }
libc = "0.2"
foreign-types = "0.5"
log = "0.4"
fontdue = "0.9.3"

[target.'cfg(not(any(target_os = "macos", windows, target_arch = "wasm32")))'.dependencies]
yeslogic-fontconfig-sys = "6.0.0"
freetype-rs = "0.36.0"
resvg = { version = "0.45.1", default-features = false }

[target.'cfg(not(any(target_os = "macos", windows, target_arch = "wasm32")))'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"
core-text = "21.0.0"
core-graphics = "0.24.0"
core-foundation-sys = "0.8.4"
once_cell = "1.12"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = [
    "NSString",
    "NSUserDefaults",
    "NSValue",
] }

[target.'cfg(windows)'.dependencies]
dwrote = { version = "0.11" }
winapi = { version = "0.3", features = ["impl-default"] }

[lib]
path = "src/lib.rs"
