[package]
name = "rassa-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "High-level ASS subtitle rendering pipeline for rassa."
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
rassa-core = { path = "../rassa-core", version = "0.1.1" }
rassa-fonts = { path = "../rassa-fonts", version = "0.1.1" }
rassa-layout = { path = "../rassa-layout", version = "0.1.1" }
rassa-parse = { path = "../rassa-parse", version = "0.1.1" }
rassa-raster = { path = "../rassa-raster", version = "0.1.1" }
rassa-shape = { path = "../rassa-shape", version = "0.1.1" }

[lib]
path = "src/lib.rs"
