[package]
name = "rassa-shape"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Text shaping integration for the rassa ASS subtitle renderer."
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
harfrust = "0.6.0"
rassa-core = { path = "../rassa-core", version = "0.2.0" }
rassa-fonts = { path = "../rassa-fonts", version = "0.2.0" }
rassa-unicode = { path = "../rassa-unicode", version = "0.2.0" }

[lib]
path = "src/lib.rs"
