[package]
name = "rassa-unibreak-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "System binding crate for libunibreak used by rassa."
repository.workspace = true
readme.workspace = true
keywords.workspace = true
links = "unibreak"
build = "build.rs"

[build-dependencies]
pkg-config = "0.3"

[lib]
path = "src/lib.rs"
