[package]
name = "rassa-unibreak"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pure-Rust Unicode line and word breaking for rassa."
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
rassa-core = { path = "../rassa-core", version = "0.2.0" }
unicode-linebreak = "0.1.5"
unicode-segmentation = "1.13.2"

[lib]
path = "src/lib.rs"
